# data_collector

./: .gitignore  LICENSE  README.md  example.config.yaml  pyproject.toml  scan_folder_summary.py  springer_api_collector.py  utils.py
requirements/: requirements.txt
src/: download_server.py
src/post_process/: download_pdf_files.py  download_with_aria2.py  download_with_playwrite.py  filter_pdfs_create_excel.py  scan_folder_summary.py  urls_to_csv.py  youtube_downloader.py
src/pre_process/: aami_collector.py  google_search_links.py  jstage_collector.py  sagepub_collector.py  springer_api_collector.py  wiley_collector.py
src/utils/: utils.py
